More stubs for EAP mechanism

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,26 @@
-autom4te.cache
+/aclocal.m4
+/autom4te.cache
+/compile
+/config.guess
+/config.log
+/config.status
+/config.sub
+/config.h
+/configure
+/depcomp
+
+/libtool
+/ltmain.sh
+/missing
+
+.DS_Store
+
 Makefile.in
-aclocal.m4
-configure
+Makefile
+
+*.la
+*.lo
+*~
+
+.deps
+.libs
