Some work on SAML

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,11 +4,15 @@ gssdir = $(libdir)/gss
 
 gss_LTLIBRARIES = libmech_eap.la
 
-libmech_eap_la_CFLAGS  = -DBUILD_GSSEAP_LIB -g -Wall -fno-strict-aliasing \
-                         @EAP_CFLAGS@ @KRB5_CFLAGS@ @TARGET_CFLAGS@
-libmech_eap_la_LDFLAGS = -export-symbols mech_eap.exports -version-info 0:0:0 \
-                         @EAP_LDFLAGS@ @KRB5_LDFLAGS@ @TARGET_LDFLAGS@
-libmech_eap_la_LIBADD  = @EAP_LIBS@ @KRB5_LIBS@
+libmech_eap_la_CPPFLAGS = -DBUILD_GSSEAP_LIB
+libmech_eap_la_CFLAGS   = -g -Wall -fno-strict-aliasing \
+                           @EAP_CFLAGS@ @KRB5_CFLAGS@ @TARGET_CFLAGS@
+libmech_eap_la_CXXFLAGS = -g -Wall \
+                           @EAP_CFLAGS@ @KRB5_CFLAGS@ @SHIBSP_CXXFLAGS@ \
+                           @TARGET_CFLAGS@
+libmech_eap_la_LDFLAGS  = -export-symbols mech_eap.exports -version-info 0:0:0 \
+                           @EAP_LDFLAGS@ @KRB5_LDFLAGS@ @TARGET_LDFLAGS@
+libmech_eap_la_LIBADD   = @EAP_LIBS@ @KRB5_LIBS@
 
 libmech_eap_la_SOURCES =    			\
 	accept_sec_context.c			\
@@ -65,7 +69,7 @@ libmech_eap_la_SOURCES =    			\
 	util_oid.c				\
 	util_ordering.c				\
 	util_radius.c				\
-	util_saml.c				\
+	util_saml.cpp				\
 	util_token.c				\
 	verify_mic.c				\
 	wrap.c					\
