fix some linkage issues

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,7 @@ libmech_eap_la_CXXFLAGS = -g -Wall \
                            @TARGET_CFLAGS@
 libmech_eap_la_LDFLAGS  = -export-symbols mech_eap.exports -version-info 0:0:0 \
                            @EAP_LDFLAGS@ @KRB5_LDFLAGS@ @TARGET_LDFLAGS@
-libmech_eap_la_LIBADD   = @EAP_LIBS@ @KRB5_LIBS@
+libmech_eap_la_LIBADD   = @EAP_LIBS@ @KRB5_LIBS@ @SHIBSP_LIBS@
 
 libmech_eap_la_SOURCES =    			\
 	accept_sec_context.c			\
