More work on SAML code

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,6 +70,7 @@ libmech_eap_la_SOURCES =    			\
 	util_name.c				\
 	util_oid.c				\
 	util_ordering.c				\
+	util_radius.c				\
 	util_saml.cpp				\
 	util_token.c				\
 	verify_mic.c				\
