use shibresolver API properly

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,11 +9,11 @@ libmech_eap_la_CFLAGS   = -g -Wall -fno-strict-aliasing \
 			  @EAP_CFLAGS@ @KRB5_CFLAGS@ @TARGET_CFLAGS@
 libmech_eap_la_CXXFLAGS = -g -Wall \
 			  @EAP_CFLAGS@ @KRB5_CFLAGS@ @SHIBSP_CXXFLAGS@ \
-			  @TARGET_CFLAGS@
+			  @SHIBRESOLVER_CXXFLAGS@ @TARGET_CFLAGS@
 libmech_eap_la_LDFLAGS  = -export-symbols mech_eap.exports -version-info 0:0:0 \
 			  -no-undefined \
 			  @EAP_LDFLAGS@ @KRB5_LDFLAGS@ @TARGET_LDFLAGS@
-libmech_eap_la_LIBADD   = @EAP_LIBS@ @KRB5_LIBS@ @SHIBSP_LIBS@
+libmech_eap_la_LIBADD   = @EAP_LIBS@ @KRB5_LIBS@ @SHIBSP_LIBS@ @SHIBRESOLVER_LIBS@
 
 libmech_eap_la_SOURCES =    			\
 	accept_sec_context.c			\
