--- a/configure.ac
+++ b/configure.ac
@@ -31,5 +31,6 @@ AC_SUBST(TARGET_LDFLAGS)
 AX_CHECK_KRB5
 AX_CHECK_EAP
 AX_CHECK_SHIBSP
+AX_CHECK_SHIBRESOLVER
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
