--- a/Makefile.am
+++ b/Makefile.am
@@ -46,9 +46,11 @@ mech_eap_la_SOURCES =    			\
 	inquire_context.c			\
 	inquire_cred.c				\
 	inquire_cred_by_oid.c			\
+	inquire_mech_for_saslname.c		\
 	inquire_mechs_for_name.c		\
 	inquire_name.c				\
 	inquire_names_for_mech.c		\
+	inquire_saslname_for_mech.c		\
 	inquire_sec_context_by_oid.c		\
 	map_name_to_any.c			\
 	process_context_token.c			\
