support for lucid export

--- a/Makefile.am
+++ b/Makefile.am
@@ -73,6 +73,7 @@ mech_eap_la_SOURCES =    			\
 	util_cred.c				\
 	util_crypt.c				\
 	util_krb.c				\
+	util_lucid.c				\
 	util_mech.c				\
 	util_name.c				\
 	util_oid.c				\
