--- a/Makefile.am
+++ b/Makefile.am
@@ -99,5 +99,5 @@ radius_ad_la_CFLAGS  = -g -Wall -fno-strict-aliasing \
 radius_ad_la_LDFLAGS = -avoid-version -module \
 		       -export-symbols radius_ad.exports -no-undefined
 radius_ad_la_LIBADD  = @KRB5_LIBS@
-radius_ad_la_SOURCES = util_adshim.c util_alloc.c
+radius_ad_la_SOURCES = util_adshim.c
 endif
