don't store count in exported RADIUS attrs

--- a/Makefile.am
+++ b/Makefile.am
@@ -72,6 +72,7 @@ mech_eap_la_SOURCES =    			\
 	util_cksum.c				\
 	util_cred.c				\
 	util_crypt.c				\
+	util_exts.c				\
 	util_krb.c				\
 	util_lucid.c				\
 	util_mech.c				\
