--- a/Makefile.am
+++ b/Makefile.am
@@ -8,14 +8,14 @@ gss_LTLIBRARIES = mech_eap.la
 
 mech_eap_la_CPPFLAGS = -DBUILD_GSSEAP_LIB -DSYSCONFDIR=\"${sysconfdir}\" -DDATAROOTDIR=\"${datarootdir}\"
 mech_eap_la_CFLAGS   = -g -Wall -fno-strict-aliasing \
-			@EAP_CFLAGS@ @RADSEC_CFLAGS@ @KRB5_CFLAGS@ @TARGET_CFLAGS@
+			@KRB5_CFLAGS@ @EAP_CFLAGS@ @RADSEC_CFLAGS@ @TARGET_CFLAGS@
 mech_eap_la_CXXFLAGS = -g -Wall \
-			@EAP_CFLAGS@ @RADSEC_CFLAGS@ @KRB5_CFLAGS@ \
+			@KRB5_CFLAGS@ @EAP_CFLAGS@ @RADSEC_CFLAGS@ \
 		        @SHIBSP_CXXFLAGS@ @SHIBRESOLVER_CXXFLAGS@ @TARGET_CFLAGS@
 mech_eap_la_LDFLAGS  = -avoid-version -module \
 			-export-symbols mech_eap.exports -no-undefined \
 			@EAP_LDFLAGS@ @RADSEC_LDFLAGS@ @TARGET_LDFLAGS@
-mech_eap_la_LIBADD   = @EAP_LIBS@ @RADSEC_LIBS@ @KRB5_LIBS@ @SHIBSP_LIBS@ \
+mech_eap_la_LIBADD   = @KRB5_LIBS@ @EAP_LIBS@ @RADSEC_LIBS@ @SHIBSP_LIBS@ \
 		       @SHIBRESOLVER_LIBS@
 
 mech_eap_la_SOURCES =    			\
@@ -106,12 +106,12 @@ radius_ad_la_SOURCES = util_adshim.c
 endif
 
 gsseap_err.h: gsseap_err.et
-	$(prefix)/bin/compile_et $<
+	$(COMPILE_ET) $<
 
 gsseap_err.c: gsseap_err.h
 
 radsec_err.h: radsec_err.et
-	$(prefix)/bin/compile_et $<
+	$(COMPILE_ET) $<
 
 radsec_err.c: radsec_err.h
 
