Update for libradsec changes

--- a/radsec.conf
+++ b/radsec.conf
@@ -1,10 +1,10 @@
 config gss-eap {
-        type = UDP
-        server {
-            hostname = "localhost"
-            service = "1812"
-            secret = "testing123"
-            timeout = 1
-            tries = 10
+    type = UDP
+    timeout = 1
+    retries = 10
+    server {
+        hostname = "localhost"
+        service = "1812"
+        secret = "testing123"
     }
 }
