Define AC_GNU_SOURCE to avoid Linux compile warnings

--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,7 @@ LT_INIT([dlopen disable-static])
 AC_PROG_CC
 AC_PROG_CXX
 AC_CONFIG_HEADERS([config.h])
+AC_GNU_SOURCE
 
 dnl Check if we're on Solaris and set CFLAGS accordingly
 dnl AC_CANONICAL_TARGET
