update for latest libradsec

--- a/radsec.conf
+++ b/radsec.conf
@@ -1,7 +1,9 @@
-config gss-eap {
-    type = UDP
-    timeout = 1
-    retries = 10
+dictionary = "/usr/local/etc/raddb/dictionary"
+
+realm gss-eap {
+    type = "UDP"
+    timeout = 5
+    retries = 3
     server {
         hostname = "localhost"
         service = "1812"
