Depend on libjansson-dev

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,8 @@ Section: net
 Priority: optional
 Maintainer: Sam Hartman <hartmans@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), autotools-dev, libshibsp-dev (>= 1.5+dfsg~moonshot1), 
-    libradsec-dev, libkrb5-dev (>= 1.9), libshib-resolver-dev
+    libradsec-dev, libkrb5-dev (>= 1.9), 
+    libshib-resolver-dev, libjansson-dev
 Standards-Version: 3.9.1
 Homepage: http://www.project-moonshot.org/
 Vcs-Git: http://www.project-moonshot.org/git/moonshot.git
