Unbreak TTLS by compiling with -DCONFIG_TLS_INTERNAL_CLIENT

--- a/Makefile.am
+++ b/Makefile.am
@@ -56,7 +56,7 @@ CFLAGS += -DCONFIG_IPV6
 
 CFLAGS += -DCONFIG_INTERNAL_LIBTOMMATH
 CFLAGS += -DCONFIG_CRYPTO_INTERNAL
-
+CFLAGS += -DCONFIG_TLS_INTERNAL_CLIENT
 
 UTILS_SRCS = src/utils/base64.c \
 	src/utils/common.c \
