--- a/Makefile.in
+++ b/Makefile.in
@@ -107,7 +107,8 @@ CFLAGS = @CFLAGS@ -DEAP_TLS -DEAP_PEAP -DEAP_TTLS -DEAP_MD5 \
 	-DEAP_SERVER_GTC -DEAP_SERVER_PSK -DEAP_SERVER_PAX \
 	-DEAP_SERVER_SAKE -DEAP_SERVER_GPSK -DEAP_SERVER_GPSK_SHA256 \
 	-DIEEE8021X_EAPOL -DCONFIG_IPV6 -DCONFIG_INTERNAL_LIBTOMMATH \
-	-DCONFIG_CRYPTO_INTERNAL
+	-DCONFIG_CRYPTO_INTERNAL -DCONFIG_TLS_INTERNAL_CLIENT \
+	-DCONFIG_TLS_INTERNAL_SERVER
 COMPILE_ET = @COMPILE_ET@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
