--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ SOURCES_peer += src/eap_peer/eap.c
 SOURCES_peer += src/eap_common/eap_common.c
 SOURCES_peer += src/eap_peer/eap_methods.c
 SOURCES_peer += src/eap_peer/eap_tls_common.c
--CFLAGS += -DEAP_TLS
+CFLAGS += -DEAP_TLS
 CFLAGS += -DEAP_PEAP
 CFLAGS += -DEAP_TTLS
 CFLAGS += -DEAP_MD5
