implement gss_inquire_cred_by_mech

--- a/mech_eap/Makefile.am
+++ b/mech_eap/Makefile.am
@@ -52,6 +52,7 @@ mech_eap_la_SOURCES =    			\
 	inquire_attrs_for_mech.c		\
 	inquire_context.c			\
 	inquire_cred.c				\
+	inquire_cred_by_mech.c			\
 	inquire_cred_by_oid.c			\
 	inquire_mech_for_saslname.c		\
 	inquire_mechs_for_name.c		\
