--- a/configure.ac
+++ b/configure.ac
@@ -3,13 +3,14 @@ AC_INIT([mech_eap], [0.1], [bugs@project-moonshot.org])
 dnl AC_CONFIG_MACRO_DIR([m4])
 dnl AM_INIT_AUTOMAKE([silent-rules])
 AM_INIT_AUTOMAKE
+AM_MAINTAINTER_MODE()
 LT_PREREQ([2.2])
 LT_INIT([dlopen disable-static])
 
+AC_GNU_SOURCE
 AC_PROG_CC
 AC_PROG_CXX
 AC_CONFIG_HEADERS([config.h])
-AC_GNU_SOURCE
 
 dnl Check if we're on Solaris and set CFLAGS accordingly
 dnl AC_CANONICAL_TARGET
