Mixed changes to configure.ac some good, some bad

--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,7 @@ AC_GNU_SOURCE
 AM_INIT_AUTOMAKE
 AM_MAINTAINER_MODE()
 LT_PREREQ([2.2])
-LT_INIT([dlopen disable-static])
+LT_INIT([dlopen disable-static win32-dll])
 
 AC_PROG_CC
 AC_PROG_CXX
@@ -66,11 +66,14 @@ AM_CONDITIONAL(GSSEAP_ENABLE_ACCEPTOR, test "x$acceptor" != "xno")
 
 AC_SUBST(TARGET_CFLAGS)
 AC_SUBST(TARGET_LDFLAGS)
-AX_CHECK_KRB5
+dnl AX_CHECK_KRB5
+AM_CONDITIONAL(HEIMDAL, test "x$heimdal" != "xno")
 dnl AX_CHECK_EAP
-AX_CHECK_SHIBSP
-AX_CHECK_SHIBRESOLVER
-AX_CHECK_RADSEC
-AX_CHECK_JANSSON
+if test "x$acceptor" = "xyes" ; then
+  AX_CHECK_SHIBSP
+  AX_CHECK_SHIBRESOLVER
+  AX_CHECK_RADSEC
+  AX_CHECK_JANSSON
+fi
 AC_CONFIG_FILES([Makefile libeap/Makefile mech_eap/Makefile])
 AC_OUTPUT
