support for libmoonshot identity selector

--- a/configure.ac
+++ b/configure.ac
@@ -53,5 +53,6 @@ AX_CHECK_SHIBSP
 AX_CHECK_SHIBRESOLVER
 AX_CHECK_RADSEC
 AX_CHECK_JANSSON
+AX_CHECK_LIBMOONSHOT
 AC_CONFIG_FILES([Makefile libeap/Makefile mech_eap/Makefile])
 AC_OUTPUT
