--- a/configure.ac
+++ b/configure.ac
@@ -51,8 +51,11 @@ AC_SUBST(TARGET_CFLAGS)
 AC_SUBST(TARGET_LDFLAGS)
 AX_CHECK_KRB5
 dnl AX_CHECK_EAP
-AX_CHECK_SHIBSP
+AX_CHECK_OPENSAML
 AX_CHECK_SHIBRESOLVER
+if test x_$found_shibresolver = x_yes; then
+  AX_CHECK_SHIBSP
+fi
 AX_CHECK_RADSEC
 AX_CHECK_JANSSON
 AX_CHECK_LIBMOONSHOT
