--- a/mech_eap.spec.in
+++ b/mech_eap.spec.in
@@ -29,7 +29,7 @@ Project Moonshot provides federated access management.
 
 
 %build
-	export LDFLAGS='-L/usr/%{_lib}/freeradius -L%{_libdir}'
+	export LDFLAGS='-L/usr/%{_lib}/freeradius -Wl,--rpath=/usr/%{_lib}/freeradius'
 %configure  --with-libmoonshot=%{_prefix} --with-krb5=%{_prefix} --disable-reauth
 make %{?_smp_mflags}
 
