exchange initiator name/server hash in metadata
cred is used

make probing optional unless configured by flag/env var

--- a/mech_eap/Makefile.am
+++ b/mech_eap/Makefile.am
@@ -105,6 +105,7 @@ mech_eap_la_SOURCES =    			\
 	util_lucid.c				\
 	util_mech.c				\
 	util_name.c				\
+	util_negoex.c				\
 	util_oid.c				\
 	util_ordering.c				\
 	util_sm.c				\
